@@ -2349,15 +2349,15 @@ sub handle_configure
     local ($top_reldir);
 
     # Handle $local:$input syntax again.
-    local ($amfile, $infile, $colon_infile);
+    local ($infile, $colon_infile);
 
-    $input = &basename ($input);
-    $local = &basename ($local);
+    local ($input_base) = &basename ($input);
+    local ($local_base) = &basename ($local);
 
-    $amfile = $input . '.am';
+    local ($amfile) = $input_base . '.am';
     # We know we can always add '.in' because it really should be an
     # error if the .in was missing originally.
-    $infile = '$(srcdir)/' . $input . '.in';
+    $infile = '$(srcdir)/' . $input_base . '.in';
     if ($local ne $input)
     {
 	$colon_infile = ':' . $input . '.in';
@@ -2376,7 +2376,7 @@ sub handle_configure
 		      . ' ' . $input . $colon_infile . "\n\n");
 
     # This rule remakes the Makefile.
-    $output_rules .= ($local . ': ' . $infile . ' '
+    $output_rules .= ($local_base . ': ' . $infile . ' '
 		      . '$(top_builddir)/config.status $(BUILT_SOURCES)'
 		      . "\n"
 		      . "\tcd \$(top_builddir) \\\n"
