@@ -1,5 +1,8 @@
 Sat Dec  7 11:34:39 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_configure): Pass correct args to automake
+	invocations.  Test remake2.test.
+
 	* automake.in (handle_configure): Check dirname of $file, not of
 	$local.  Test output2.test.
 
